eliminate usage of guava collections in unit tests