@@ -21,10 +21,10 @@ package io.wcm.devops.conga.generator.util;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import org.junit.jupiter.api.Test;
+import java.util.List;
+import java.util.Map;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.Test;
 
 import io.wcm.devops.conga.generator.util.testmodel.ConfScope1;
 import io.wcm.devops.conga.generator.util.testmodel.ConfScope2;
@@ -61,46 +61,46 @@ class ConfigInheritanceResolverTest {
     scope21.setScope31(scope31);
     scope21.setScope32(scope32);
     ConfScope2 scope22 = new ConfScope2();
-    scope1.setScope2(ImmutableList.of(scope21, scope22));
+    scope1.setScope2(List.of(scope21, scope22));
     root.setScope1(scope1);
     SimpleConf simple1 = new SimpleConf();
-    scope1.setMap(ImmutableMap.of("simple", simple1));
+    scope1.setMap(Map.of("simple", simple1));
     SampleNode sample = new SampleNode();
     SimpleConf simple2 = new SimpleConf();
     sample.setSimple(simple2);
     scope1.setSample(sample);
 
-    scope1.setConfig(ImmutableMap.of("conf", "s1"));
+    scope1.setConfig(Map.of("conf", "s1"));
 
-    scope21.setConfig(ImmutableMap.of("conf2", "s21"));
+    scope21.setConfig(Map.of("conf2", "s21"));
 
-    scope22.setConfig(ImmutableMap.of("conf", "s22"));
+    scope22.setConfig(Map.of("conf", "s22"));
 
-    scope31.setConfig(ImmutableMap.of("conf2", "s31"));
+    scope31.setConfig(Map.of("conf2", "s31"));
 
-    scope32.setConfig(ImmutableMap.of("conf3", "s32"));
+    scope32.setConfig(Map.of("conf3", "s32"));
 
-    simple1.setConfig(ImmutableMap.of("conf", "simple1"));
+    simple1.setConfig(Map.of("conf", "simple1"));
 
-    simple2.setConfig(ImmutableMap.of("conf2", "simple2"));
+    simple2.setConfig(Map.of("conf2", "simple2"));
 
 
     ConfigInheritanceResolver.resolve(root);
 
 
-    assertEquals(ImmutableMap.of("conf", "s1"), scope1.getConfig());
+    assertEquals(Map.of("conf", "s1"), scope1.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "s1", "conf2", "s21"), scope21.getConfig());
+    assertEquals(Map.of("conf", "s1", "conf2", "s21"), scope21.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "s22"), scope22.getConfig());
+    assertEquals(Map.of("conf", "s22"), scope22.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "s1", "conf2", "s31"), scope31.getConfig());
+    assertEquals(Map.of("conf", "s1", "conf2", "s31"), scope31.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "s1", "conf2", "s21", "conf3", "s32"), scope32.getConfig());
+    assertEquals(Map.of("conf", "s1", "conf2", "s21", "conf3", "s32"), scope32.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "simple1"), simple1.getConfig());
+    assertEquals(Map.of("conf", "simple1"), simple1.getConfig());
 
-    assertEquals(ImmutableMap.of("conf", "s1", "conf2", "simple2"), simple2.getConfig());
+    assertEquals(Map.of("conf", "s1", "conf2", "simple2"), simple2.getConfig());
   }
 
 }
