@@ -49,8 +49,8 @@ class JexlResolverTest {
     VariableMapResolver variableMapResolver = new VariableMapResolver(context);
 
     underTest = new JexlResolver(variableMapResolver);
-    object2 = ImmutableMap.of("var4", "value4");
-    object1 = ImmutableMap.of("var3", "value3", "object2", object2,
+    object2 = Map.of("var4", "value4");
+    object1 = Map.of("var3", "value3", "object2", object2,
         "nested1var1", "${nested1.nested1var1}",
         "nested2var1", "${nested1.nested2.nested2var1}");
     variables = ImmutableMap.<String, Object>builder()
@@ -61,10 +61,10 @@ class JexlResolverTest {
         .put("refVar2", "${var2}")
         .put("refCombined", "${object1.var3}|${var1}")
         .put("jexlExpr", "${object1.var3 + ';' + var1}")
-        .put("nested1", ImmutableMap.of(
+        .put("nested1", Map.of(
             "nested1var1", "nested1-value1",
             "nested1JexlExpr", "${object1.var3 + ';' + var1}",
-            "nested2", ImmutableMap.of(
+            "nested2", Map.of(
                 "nested2var1", "nested2-value1",
                 "nested2JexlExpr", "${object1.var3 + ';' + var1}")))
         .put("array1", new String[] { "v1", "v2", "v3" })
