@@ -24,13 +24,11 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import io.wcm.devops.conga.generator.spi.context.PluginContextOptions;
 import io.wcm.devops.conga.generator.spi.context.ValueProviderGlobalContext;
@@ -55,41 +53,41 @@ class VariableStringResolverTest {
 
   @Test
   void testSimple() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "v2");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "v2");
 
     assertEquals("The v1 and v2", underTest.resolve("The ${var1} and ${var2}", variables));
   }
 
   @Test
   void testSingleVariableWithObject() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableList.of("v1", "v2"));
+    Map<String, Object> variables = Map.of("var1", List.of("v1", "v2"));
 
-    assertEquals(ImmutableList.of("v1", "v2"), underTest.resolve("${var1}", variables));
+    assertEquals(List.of("v1", "v2"), underTest.resolve("${var1}", variables));
   }
 
   @Test
   void testDefaultValue() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1");
+    Map<String, Object> variables = Map.of("var1", "v1");
 
     assertEquals("The v1 and theDefValue2", underTest.resolve("The ${var1:theDefValue1} and ${var2:theDefValue2}", variables));
   }
 
   @Test
   void testDefaultEmptyValue() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1");
+    Map<String, Object> variables = Map.of("var1", "v1");
     assertEquals("The empty value: ''", underTest.resolve("The empty value: '${var2:}'", variables));
   }
 
   @Test
   void testNestedVariables() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "${var1}${var1}", "var3", "${var2}${var1}");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "${var1}${var1}", "var3", "${var2}${var1}");
 
     assertEquals("v1,v1v1,v1v1v1", underTest.resolve("${var1},${var2},${var3}", variables));
   }
 
   @Test
   void testNestedVariables_IllegalRecursion() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "${var2}", "var2", "${var1}");
+    Map<String, Object> variables = Map.of("var1", "${var2}", "var2", "${var1}");
 
     assertThrows(IllegalArgumentException.class, () -> {
       underTest.resolve("${var1}", variables);
@@ -98,7 +96,7 @@ class VariableStringResolverTest {
 
   @Test
   void testUnknownVariable() {
-    Map<String, Object> variables = ImmutableMap.of();
+    Map<String, Object> variables = Map.of();
 
     assertThrows(IllegalArgumentException.class, () -> {
       underTest.resolve("${var1}", variables);
@@ -107,7 +105,7 @@ class VariableStringResolverTest {
 
   @Test
   void testEscapedVariables() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "\\${var1}${var1}", "var3", "${var2}${var1}");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "\\${var1}${var1}", "var3", "${var2}${var1}");
 
     assertEquals("${var1},${var1}v1,${var1}v1v1", underTest.resolve("\\${var1},${var2},${var3}", variables));
     assertEquals("\\${var1},\\${var1}v1,\\${var1}v1v1", underTest.resolve("\\${var1},${var2},${var3}", variables, false));
@@ -116,7 +114,7 @@ class VariableStringResolverTest {
 
   @Test
   void testEscapedVariables_Provider_DefValue() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1", "var2", "\\${var1}${var1}", "var3", "${var2}${var1}");
+    Map<String, Object> variables = Map.of("var1", "v1", "var2", "\\${var1}${var1}", "var3", "${var2}${var1}");
 
     assertEquals("\\${provider::var1},\\${var2:defValue},\\${provider::var3:defValue}",
         underTest.resolve("\\${provider::var1},\\${var2:defValue},\\${provider::var3:defValue}", variables, false));
@@ -126,21 +124,21 @@ class VariableStringResolverTest {
 
   @Test
   void testDeepMapVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableMap.of("k1", "v1", "k2", ImmutableMap.of("k21", "v21", "k22", "v22")));
+    Map<String, Object> variables = Map.of("var1", Map.of("k1", "v1", "k2", Map.of("k21", "v21", "k22", "v22")));
 
     assertEquals("The v1 and v21", underTest.resolve("The ${var1.k1} and ${var1.k2.k21}", variables));
   }
 
   @Test
   void testListVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableList.of("v1", "v2", ImmutableList.of("v31", "v32")));
+    Map<String, Object> variables = Map.of("var1", List.of("v1", "v2", List.of("v31", "v32")));
 
     assertEquals("The v1,v2,v31,v32", underTest.resolve("The ${var1}", variables));
   }
 
   @Test
   void testMapVariable() {
-    Map<String, Object> variables = ImmutableMap.of("var1", ImmutableMap.of("k1", "v1", "k2", ImmutableMap.of("k21", "v21", "k22", "v22")));
+    Map<String, Object> variables = Map.of("var1", Map.of("k1", "v1", "k2", Map.of("k21", "v21", "k22", "v22")));
 
     assertEquals("The k1=v1,k2=k21=v21,k22=v22", underTest.resolve("The ${var1}", variables));
   }
@@ -151,7 +149,7 @@ class VariableStringResolverTest {
     String propertyName2 = getClass().getName() + "-test.prop2";
     System.setProperty(propertyName1, "value1");
 
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1");
+    Map<String, Object> variables = Map.of("var1", "v1");
 
     assertEquals("The v1 and value1", underTest.resolve("The ${var1} and ${system::" + propertyName1 + "}", variables));
     assertEquals("The v1 and theDefValue", underTest.resolve("The ${var1} and ${system::" + propertyName2 + ":theDefValue}", variables));
@@ -164,13 +162,13 @@ class VariableStringResolverTest {
   void testCustomValueProvider() {
     // define value provider name 'customProvider' of type 'system'
     globalContext.getPluginContextOptions()
-        .valueProviderConfig(ImmutableMap.of("customProvider", ImmutableMap.of(ValueProviderGlobalContext.PARAM_PLUGIN_NAME, "system")));
+        .valueProviderConfig(Map.of("customProvider", Map.of(ValueProviderGlobalContext.PARAM_PLUGIN_NAME, "system")));
 
     String propertyName1 = getClass().getName() + "-test.propCustom1";
     String propertyName2 = getClass().getName() + "-test.propCustom2";
     System.setProperty(propertyName1, "value1");
 
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1");
+    Map<String, Object> variables = Map.of("var1", "v1");
 
     assertEquals("The v1 and value1", underTest.resolve("The ${var1} and ${customProvider::" + propertyName1 + "}", variables));
     assertEquals("The v1 and theDefValue", underTest.resolve("The ${var1} and ${customProvider::" + propertyName2 + ":theDefValue}", variables));
@@ -185,7 +183,7 @@ class VariableStringResolverTest {
 
   @Test
   void testDummyMapValueProvider() {
-    Map<String, Object> variables = ImmutableMap.of("var1", "v1");
+    Map<String, Object> variables = Map.of("var1", "v1");
 
     assertEquals("The v1 and value1 and 5", underTest.resolve("The ${var1} and ${dummy-map::map.param1} and ${dummy-map::map.param2}", variables));
     assertEquals("The v1 and theDefValue", underTest.resolve("The ${var1} and ${dummy-map::map.paramNotDefined:theDefValue}", variables));
@@ -193,7 +191,7 @@ class VariableStringResolverTest {
 
   @Test
   void testDummyMapValueProvider_ListReturnValue() {
-    assertEquals(ImmutableList.of("v1", "v2", "v3"), underTest.resolve("${dummy-map::map.listParam}", ImmutableMap.of()));
+    assertEquals(List.of("v1", "v2", "v3"), underTest.resolve("${dummy-map::map.listParam}", Map.of()));
   }
 
   @Test
